[tool.poetry]
name = "python-payments-sdk"
version = "0.1.0"
description = ""
authors = ["jerry.liu <jerry.liu@uancare.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
